--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+
+
+#ola{
+    transition: all .2s ease-in-out;
+}
+
+#ola:hover{
+    transform: scale(1.1);
+}
